--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     *{box-sizing: border-box;}
     body{
-      margin: 10%;
+      margin: 5% 10%;
       background-color: #008C95;
       font-family: 'Raleway', sans-serif;
       font-weight: 300;
