more margin tweaks

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     #minutes-read{
-      margin: 2em auto;
+      margin-bottom: 2em;
       padding: 2em;
       border-bottom: 4px solid yellow;
       text-align: center;
