--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     *{box-sizing: border-box;}
     body{
-      margin: 5% 10%;
+      margin: 2%;
       background-color: #008C95;
       font-family: 'Raleway', sans-serif;
       font-weight: 300;
@@ -39,21 +39,20 @@
       background: rgba(255, 255, 0, .6);
     }
 
+    form div{margin-bottom: 1em;}
+
     #minutes-read{
       margin-bottom: 2em;
-      padding: 2em;
+      padding: 2% 1%;
       border-bottom: 4px solid yellow;
       text-align: center;
     }
 
-
-
     ol{
-      width:60%;
-      max-width: 580px;
       list-style: none;
       padding: 0;
       margin: 0 auto;
+      text-align: center;
     }
 
     .bar{
@@ -110,6 +109,18 @@
       display: block;
       text-transform: uppercase;
       color: yellow;
+    }
+
+    @media screen and (min-width: 600px){
+      body{
+        margin: 5% 10%;
+      }
+
+      ol{
+        width:60%;
+        max-width: 580px;
+        text-align: left;
+      }
     }
 
     </style>
