--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     }
 
     ol{
+      display: flex;
+      flex-flow: row;
       list-style: none;
       padding: 0;
       margin: 0 auto;
@@ -60,7 +62,7 @@
       display: inline-block;
       height: 10em;
       width: 1em;
-      margin: 1em .2em;
+      margin: 1em .1em;
       background-color: #fff;
     }
     .one{
@@ -96,6 +98,7 @@
       background: rgba(255, 255, 0, .2);
       cursor: pointer;
       transition: all .2s ease;
+      box-shadow: 1px 1px 1px #aaa;
     }
 
     .add-log:hover{
@@ -104,11 +107,18 @@
 
     .add-log span{
       position: absolute;
-      top: -2em;
-      right: -.3em;
+      top: -3.5em;
+      right: 0;
       display: block;
       text-transform: uppercase;
       color: yellow;
+    }
+
+    .add-log span:after{
+      display: block;
+      content: " ";
+      height: 2em;
+      border-right: 1px dotted yellow;
     }
 
     @media screen and (min-width: 600px){
