--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <style>
     *{box-sizing: border-box;}
     body{
-      margin: 2%;
+      margin: 5% 0;
+      padding: 0;
       background-color: #008aaa;
       font-family: 'Raleway', sans-serif;
       font-weight: 300;
@@ -53,9 +54,15 @@
       text-align: center;
     }
 
+    .log-container{
+      position: relative;
+    }
+
     ol{
       display: flex;
       flex-flow: row;
+      align-items: center;
+      justify-content: center;
       list-style: none;
       padding: 0;
       margin: 0 auto;
@@ -123,16 +130,14 @@
       bottom: 0;
     }
 
-    @media screen and (min-width: 600px){
-      body{
-        margin: 5% 10%;
-      }
-
-      ol{
-        width:100%;
-        max-width: 700px;
-        text-align: left;
-      }
+    hr{
+      position: absolute;
+      top: 60%;
+      left: 0;
+      width: 100%;
+      height: 6px;
+      border-top: 6px solid #c8b364;
+      border-bottom: 0;
     }
 
     </style>
@@ -151,184 +156,187 @@
         <input type="submit" value="Go">
       </div>
   </form>
-  <ol>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar two">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-    <li class="bar one">
-			<span class="reading"></span>
-			<span class="exercise"></span>
-		</li>
-  </ol>
+  <div class="log-container">
+    <ol>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar two">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+      <li class="bar one">
+  			<span class="reading"></span>
+  			<span class="exercise"></span>
+  		</li>
+    </ol>
+    <hr>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>
     $(document).ready(function(){
